# agent_dev

./: README.md  debug_population.py  pyproject.toml  test_crypto.py  test_multiple_cities.py
agent_tools/: __init__.py
agent_tools/services/: __init__.py  location.py  population.py  time.py  weather.py
backend/: .env.example  .env.template  .gitignore  README.md  api_docs_test.py  debug_detailed.py  main.py  pyproject.toml  requirements.txt  run_api.py  start_api.bat  start_api.py  start_dev.bat  start_dev.py  test_crypto_agent.py
backend/agent_tools/services/: timezones.py
backend/api/: agent_manager.py  config.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  utils.py
backend/api/routers/: city_info.py  crypto.py  general.py  law.py
backend/api/services/: __init__.py  city_info.py  crypto.py  law.py
backend/city_info_expert/: agent.py
backend/crypto_expert/: __init__.py  agent.py
backend/crypto_tools/: __init__.py
backend/crypto_tools/services/: __init__.py  price.py
backend/law_expert/: agent.py
backend/law_tools/: __init__.py
backend/law_tools/services/: __init__.py  case.py  definition.py  jurisdiction.py  statute.py
backend/tests/: test_agent_endpoints.py  test_agent_manager.py  test_api_endpoints.py  test_city_info_expert.py  test_crypto_price_change.py  test_google_adk_agents.py  test_integration.py  test_law_expert.py  test_law_tools.py
crypto_expert/: agent.py
crypto_tools/: __init__.py
crypto_tools/services/: __init__.py  price.py
frontend/: .gitignore  README.md  package-lock.json  package.json
(+21 files in other folders)
