[project]
name = "agent-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.19.0",
    "litellm>=1.80.5",
    "requests>=2.31.0",
    "geopy>=2.4.0",
    "wikipedia-api>=0.6.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["city_info_expert", "crypto_expert", "law_expert", "law_tools", "crypto_tools", "api", "agent_tools", "agent_tools.services", "crypto_tools.services", "law_tools.services"]
